--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Moonshot</title>
     <script
-      type="text/javascript"
       src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"
+      defer
     ></script>
-    <script type="text/javascript" src="TitleScene.js"></script>
-    <script type="text/javascript" src="GameScene.js"></script>
-    <script type="text/javascript" src="index.js"></script>
+    <script src="TitleScene.js" defer></script>
+    <script src="GameScene.js" defer></script>
+    <script src="index.js" defer></script>
   </head>
   <body></body>
 </html>
